# Edge-Finder

./: .env.example  .gitignore  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  deps.py  main.py
backend/app/db/: engine.py  models.py
backend/app/routers/: cot.py  economic.py  llm.py  macro.py  news.py  scorecard.py  seasonality.py  sentiment.py  symbols.py  technical.py
backend/app/schemas/: cot.py  economic.py  llm.py  news.py  scorecard.py  sentiment.py
backend/app/services/: cache.py  cot.py  fred.py  llm.py  news.py  scoring.py  seasonality.py  sentiment.py  yfinance_svc.py
backend/app/tasks/: cot_updater.py  fred_updater.py  news_updater.py  scheduler.py  sentiment_updater.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/: middleware.ts
frontend/src/app/: client-layout.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/account/: page.tsx
frontend/src/hooks/: useAuth.ts  useLLMChat.ts  useQuote.ts  useScorecard.ts  useWatchlist.ts
frontend/src/lib/: api.ts  auth.ts  constants.ts  supabase-server.ts  supabase.ts  ws.ts
frontend/src/stores/: useAppStore.ts
tvproxy/: Dockerfile  package-lock.json  package.json
tvproxy/src/: config.ts  index.ts  tradingview.d.ts
tvproxy/src/routes/: candles.ts  indicators.ts  quotes.ts  search.ts  ta.ts
tvproxy/src/services/: chartManager.ts  quoteManager.ts  taManager.ts  tvClient.ts
tvproxy/src/ws/: realtimeServer.ts
(+69 files in other folders)
