[project]
name = "edgefinder-backend"
version = "1.0.0"
description = "EdgeFinder - Multi-asset scoring and analysis platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.5.0",
    "fredapi>=0.5.2",
    "yfinance>=0.2.40",
    "finnhub-python>=2.4.20",
    "beautifulsoup4>=4.12.0",
    "anthropic>=0.39.0",
    "apscheduler>=3.10.0",
    "pandas>=2.2.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
